
20-11-2022: Minor bug fixes.

22-11-2022: Improved TAA blurry by unjitter UV. Move PostProcessVS.hlsl under PostProcessing folder. Started to add more profiling in UHE.

23-11-2022: Arranged the dialog code. Added a new building configuration: Release_Editor, so it can have the similar performance to release build but keeps the editors.

24-11-2022: Kicked off the implementation of GPU timing. Implemented a GPUQuery class.

25-11-2022: Finished profile window for the moment. Added bEnableGPUTiming in the setting window.

26-11-2022: Minor performance and fix change for a few shaders.

27-11-2022: Added FPS Limit feature. Setting FPSLimit to 0 indicates no limit.

28-11-2022: Done both mesh and memory optimizations. For now, Input Assembly will have POSITION layout only. The other attributes like UV, Normal, Tangent are accessed via StructuredBuffer. Image and mesh memory are shared.

30-11-2022: Started to add depth prepass stuffs. Done! It's default to false, since current scene is small and can be benefit from depth pre pass. Also removed a few global variables in CoreGlobal.h. Minor constant optimization for vertex shader, it uses matrix WorldViewClip now for SV_POSITION instead of separating as world/viewclip.

01-12-2022: Started to add frustum culling. Added mesh bound and renderer bound. And of course the bound frustum in camera component. Enhanced the const correctness in codebase. From now on, rendering should only iterate visible renderers in a vector.

02-12-2022: Try to add ray tracing based occlusion test. Finished the RTOT implementation, it could be useful in some cases but further tests are needed. Fixed some serious bugs regarding texture index, didn't set them properly!

09-12-2022: Added parallel submission feature! Only apply to heavy rendering pass now. Create a UHThread class as thread wrapper.

21-12-2022: Arranged shader class implementation. Separated as header and cpp. Implemented BindParameters() function too.


